--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="WspShawty">
+  <meta name="author" content="dhuan094">
 
-  <title>John Doe - Business Administration</title>
+  <title>Dylan Huang - Human Resources Management</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/dylanhuang.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Dylan Huang
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Human Resources Management📚</div>
+        <p class="lead mb-4">Hello there, I'm Dylan Huang, a Human Resources Management major who's goal is to bring stability and promote healthy communication within the workplace. I believe that for a workplace to be smoothly functioning and for everyone's voice to be heard.<br><br>
 
-        Enter bio here<br><br>
+        I specialize in employee management and organizing ideas for discussion, I excel in moderating discussions and leading teams while offering advice when needed.<br><br>
 
-        Enter bio here
+        I'm your guy if you need a leader who can listen to opinions unbiased and promote healthy habits to the whole team.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/yourmom">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/yourdad">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/yourcousin">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:dhuan094@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Assistant Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://PeterPiperCo.com">Peter Piper Co.</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Developed Website for Sales<br> 
+              • Team Leader for Pickle Distribution<br>
+              • Experience with HTML, CSS, Javascript, Photoshop, and Excel<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2022 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Server</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://TheWarehouse.com">The Warehouse</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for serving our customers and helping Kitchen Staff <br>
+              • ligma<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2019 - August 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">DayCamp Counselor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://FCBC.com">First Chinese Baptist Church</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Ran sessions to help children learn<br>
+            • Took care of children and led talks<br>
+            • Created job opportunities for fellow counselors<br>
+            • Helped higher management run the program for 4 summers<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2018 - January 2022</span>
           </div>
         </div>
 
@@ -167,7 +167,7 @@
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2022</span>
           </div>
         </div>
 
@@ -175,7 +175,7 @@
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>Human Resources Management</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2012 - May 2016</span>
@@ -192,7 +192,10 @@
         <h2 class="mb-5">Portfolio</h1>
         <center>
             <img src="img/image2.jpeg" width="500px">
-        </center>
+            <img src="img/bananaman.jpg" width="500px"><br>
+            <img src="img/bananaman1.jpg" width="500px">
+            <img src="img/pickleman.png" width="500px"><br>
+          </center>
       </div>
     </section>
 
